--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Utilities used by Notify",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard"
   },
   "author": "Luca Tabone <taboneluca3@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "standard": "^8.6.0"
+  }
 }
