--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Utilities used by Notify",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard && mocha"
   },
   "author": "Luca Tabone <taboneluca3@gmail.com>",
   "license": "ISC",
+  "standard": {
+    "env": [
+      "mocha"
+    ]
+  },
   "devDependencies": {
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.6",
     "standard": "^8.6.0"
   }
 }
